--- a/app/src/main/res/layout/activity_passenger_main.xml
+++ b/app/src/main/res/layout/activity_passenger_main.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activities.PassengerMainActivity">
 
+    <Button
+        android:id="@+id/buttonInbox"
+        android:layout_width="132dp"
+        android:layout_height="53dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="52dp"
+        android:text="@string/inbox"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/buttonAccount"
+        android:layout_width="132dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="52dp"
+        android:text="@string/account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonInbox"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
