--- a/app/src/main/res/layout/activity_passenger_register.xml
+++ b/app/src/main/res/layout/activity_passenger_register.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".activities.PassengerRegisterActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="104dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="96dp"
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
