--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal_300">#34A4BF</color>
+    <color name="teal_1000">#114C7C</color>
+    <color name="green_1000">#026056</color>
+    <color name="green_1200">#03554D</color>
 </resources>
