--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.UberApp_Tim26" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#34A4BF</item>
-        <item name="colorPrimaryVariant">#114C7C</item>
+        <item name="colorPrimary">@color/teal_300</item>
+        <item name="colorPrimaryVariant">@color/teal_1000</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
