--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -20,15 +20,18 @@
         />
 
     <EditText
+        android:id="@+id/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edittext"
         android:layout_below="@id/signin"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
         android:hint="Username"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
         android:padding="20dp"
-        android:background="#30ffffff"/>
+        android:textColorHint="@color/white" />
 
     <EditText
         android:id="@+id/password"
@@ -99,18 +102,5 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:layout_marginTop="30dp"/>
-
-    <!--    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create new account?"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_below="@id/loginbtn"
-            android:gravity="center"
-            android:layout_marginTop="60dp"
-            android:padding="20dp"
-            android:layout_centerHorizontal="true"/>-->
 
 </RelativeLayout>
