--- a/app/src/main/res/layout/activity_passenger_register.xml
+++ b/app/src/main/res/layout/activity_passenger_register.xml
@@ -7,16 +7,23 @@
     tools:context=".activities.PassengerRegisterActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewEmail"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:text="@string/email"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textColor="@color/purple_700"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:ems="10"
         android:hint="@string/e_mail_example"
         android:inputType="textEmailAddress"
@@ -24,32 +31,46 @@
         android:textColorHint="#757575" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="@string/phone"
-        android:textSize="20sp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        android:textColor="@color/purple_700"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:ems="10"
         android:inputType="phone"
         android:minHeight="55dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewPassword"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="@string/password"
-        android:textSize="20sp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        android:textColor="@color/purple_700"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:ems="10"
         android:hint="@string/password_example"
         android:inputType="textPassword"
@@ -58,9 +79,12 @@
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/buttonRegister2"
+        android:id="@+id/buttonRegister"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/purple_700"
         android:text="@string/register"
-        android:layout_gravity="center" />
+        android:textSize="20dp"
+        android:textStyle="bold" />
 </LinearLayout>
