--- a/app/src/main/res/layout/activity_driver_account.xml
+++ b/app/src/main/res/layout/activity_driver_account.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".activities.DriverAccountActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarDriverAccount"
+            android:layout_width="407dp"
+            android:layout_height="74dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="1dp"
+            android:background="@color/purple_200"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
         android:id="@+id/driverEmail"
@@ -51,16 +74,17 @@
         android:layout_height="172dp"
         android:contentDescription="@string/profile_image"
         android:scaleType="centerCrop"
+        android:layout_below="@id/appBar"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/driverName"
         android:layout_width="201dp"
         android:layout_height="40dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/appBar"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:layout_toEndOf="@+id/imageView2"
         android:text=""
