--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -30,6 +30,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:hint="Username"
+        android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColorHint="@color/white" />
 
@@ -44,6 +45,7 @@
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:hint="Password"
+        android:inputType="textPassword"
         android:padding="20dp"
         android:textColorHint="@color/white" />
 
