--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -45,6 +45,7 @@
         android:textColorHint="@color/white" />
 
     <TextView
+        android:id="@+id/forgotenpassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/password"
@@ -99,6 +100,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:layout_marginTop="30dp"/>
+
 
     <!--    <TextView
             android:layout_width="wrap_content"
