--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -4,9 +4,9 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <ListView
+   <!-- <ListView
         android:id="@+id/lista"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent" />-->
 
 </LinearLayout>
