--- a/app/src/main/res/layout/activity_passenger_register.xml
+++ b/app/src/main/res/layout/activity_passenger_register.xml
@@ -85,6 +85,6 @@
         android:layout_gravity="center"
         android:backgroundTint="@color/purple_700"
         android:text="@string/register"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 </LinearLayout>
