--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,10 +10,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GariGo"
+        android:text="@string/garigo"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         />
