--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -11,9 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/signin"
-        android:text="Sign in"
+        android:text="@string/sign_in"
         android:textColor="@color/white"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"
         android:layout_margin="50dp"
         android:gravity="center"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
-        android:hint="Username"
+        android:hint="@string/username"
         android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColorHint="@color/white" />
@@ -44,7 +44,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
-        android:hint="Password"
+        android:hint="@string/password2"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColorHint="@color/white" />
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/password"
-        android:text="Forgot password?"
+        android:text="@string/forgot_password"
         android:gravity="end"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
@@ -70,8 +70,8 @@
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/purple_700"
         android:padding="20dp"
-        android:text="Log in"
-        android:textSize="18dp"
+        android:text="@string/log_in"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"/>
@@ -87,8 +87,8 @@
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/purple_700"
         android:padding="20dp"
-        android:text="Create new account"
-        android:textSize="18dp"
+        android:text="@string/create_new_account"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"/>
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ortext"
-        android:text="OR"
+        android:text="@string/or"
         android:layout_below="@id/loginbtn"
         android:textColor="@color/white"
         android:gravity="center"
