--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -50,6 +50,7 @@
         android:textColorHint="@color/white" />
 
     <TextView
+        android:id="@+id/forgotenpassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/password"
