--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -5,22 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.UserLoginActivity"
-    android:background="@drawable/fade_background">
+    android:background="@color/black">
 
     <TextView
+        android:id="@+id/signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/signin"
-        android:text="@string/sign_in"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:gravity="center"
+        android:text="Welcome back!"
         android:textColor="@color/white"
         android:textSize="35sp"
-        android:textStyle="bold"
-        android:layout_margin="50dp"
-        android:gravity="center"
-        />
+        android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/edittext"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/signin"
@@ -38,7 +40,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/edittext"
+        android:layout_below="@id/email"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -69,12 +71,12 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/purple_700"
+        android:backgroundTint="@color/white"
         android:padding="20dp"
         android:text="@string/log_in"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_centerHorizontal="true"/>
 
     <com.google.android.material.button.MaterialButton
@@ -86,12 +88,12 @@
         android:layout_marginEnd="10dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/purple_700"
+        android:backgroundTint="@color/white"
         android:padding="20dp"
         android:text="@string/create_new_account"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_centerHorizontal="true"/>
 
     <TextView
