--- a/app/src/main/res/layout/activity_driver_acceptance_ride.xml
+++ b/app/src/main/res/layout/activity_driver_acceptance_ride.xml
@@ -74,6 +74,7 @@
             android:text="@string/accept"
             android:textStyle="bold"
             android:textSize="18sp"
+            android:background="@color/black"
             android:textColor="@color/white" />
 
         <com.google.android.material.button.MaterialButton
@@ -84,6 +85,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
+            android:background="@color/red"
             android:backgroundTint="@color/purple_700"
             android:padding="20dp"
             android:text="@string/decline"
