--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     tools:context=".activities.SplashActivity"
-    android:background="@drawable/fade_background">
+    android:background="@color/black">
 
     <TextView
         android:layout_width="wrap_content"
