--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.UserLoginActivity"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/signin"
@@ -17,7 +17,7 @@
         android:layout_marginBottom="50dp"
         android:gravity="center"
         android:text="Welcome back!"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="35sp"
         android:textStyle="bold" />
 
@@ -30,11 +30,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
+        android:background="@color/off_white"
         android:hint="@string/username"
         android:inputType="textEmailAddress"
         android:padding="20dp"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/black" />
 
     <EditText
         android:id="@+id/password"
@@ -45,11 +45,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
+        android:background="@color/off_white"
         android:hint="@string/password2"
         android:inputType="textPassword"
         android:padding="20dp"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/black" />
 
     <TextView
         android:id="@+id/forgotenpassword"
@@ -71,7 +71,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/off_white"
         android:padding="20dp"
         android:text="@string/log_in"
         android:textSize="18sp"
@@ -88,7 +88,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/off_white"
         android:padding="20dp"
         android:text="@string/create_new_account"
         android:textSize="18sp"
@@ -102,7 +102,7 @@
         android:id="@+id/ortext"
         android:text="@string/or"
         android:layout_below="@id/loginbtn"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
