--- a/app/src/main/res/layout/fragment_passenger_main.xml
+++ b/app/src/main/res/layout/fragment_passenger_main.xml
@@ -6,9 +6,15 @@
     tools:context=".fragments.passenger.PassengerMainFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:text="@string/hello_blank_fragment" />-->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+        
+
+    </RelativeLayout>
 
 </FrameLayout>
