--- a/app/src/main/res/layout/fragment_passenger_main.xml
+++ b/app/src/main/res/layout/fragment_passenger_main.xml
@@ -78,6 +78,7 @@
             </RelativeLayout>
 
             <Button
+                android:id="@+id/findride"
                 android:layout_width="250sp"
                 android:layout_height="50sp"
                 android:layout_below="@+id/checkboxes"
